# kami

./: .gitattributes  .gitignore  ACTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INIT_PROMPT.md  PROGRESS.md  README.md  SECURITY.md  tarpaulin-report.html  tarpaulin-report.json
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  pages.yml  release.yml
PROMPT/: HANDOFF.md  ROADMAP_V1.md  ROADMAP_V1_PROMPT.md
config/: default.toml
crates/kami-cli/: Cargo.toml
crates/kami-cli/src/: input.rs  main.rs  output.rs  shared.rs
crates/kami-cli/src/commands/: dev.rs  dev_tests.rs  download.rs  exec.rs  init.rs  inspect.rs  install.rs  keygen.rs  list.rs  mod.rs  pin.rs  publish.rs  run.rs  search.rs  serve.rs  sign.rs  status.rs  templates.rs  uninstall.rs  update.rs  validate.rs  verify.rs
crates/kami-config/: Cargo.toml
crates/kami-config/src/: lib.rs  loader.rs  manifest_loader.rs  schema.rs
crates/kami-config/tests/: fuzz_manifest.rs  manifest_loader.rs  schema.rs
crates/kami-engine/: Cargo.toml
crates/kami-engine/src/: bindings.rs  component.rs  error.rs  instance.rs  lib.rs  linker.rs  memory.rs  state.rs
crates/kami-engine/tests/: engine_basic.rs  engine_isolation.rs  error_diagnostic.rs  integration.rs
crates/kami-engine/tests/common/: mod.rs
crates/kami-guest/: Cargo.toml
crates/kami-guest/src/: abi.rs  bindings.rs  lib.rs  macros.rs
crates/kami-mcp/: Cargo.toml
crates/kami-mcp/src/: handler.rs  lib.rs
crates/kami-mcp/src/dispatch/: initialize.rs  mod.rs  tools_call.rs
crates/kami-protocol/: Cargo.toml
crates/kami-protocol/src/: jsonrpc.rs  lib.rs  schema.rs
crates/kami-protocol/src/mcp/: initialize.rs  mod.rs  prompts.rs  resources.rs  tools.rs
crates/kami-protocol/tests/: fuzz_jsonrpc.rs  jsonrpc.rs
crates/kami-registry/: Cargo.toml
crates/kami-registry/src/: lib.rs  query.rs  repository.rs
crates/kami-runtime/: Cargo.toml
crates/kami-runtime/benches/: cache_bench.rs
crates/kami-runtime/src/: cache.rs  context.rs  error.rs  executor.rs  integrity.rs  lib.rs  metrics.rs  orchestrator.rs  pipeline.rs  pool.rs  rate_limiter.rs  resolver.rs  runtime_config.rs  scheduler.rs  signature.rs  types.rs
crates/kami-runtime/tests/: cache.rs  e2e_echo.rs  e2e_http.rs  error_diagnostic.rs  metrics.rs  orchestrator.rs  pipeline.rs  rate_limiter.rs  resolver.rs  scheduler.rs  signature.rs
crates/kami-sandbox/: Cargo.toml
crates/kami-sandbox/src/: capability.rs  error.rs  filesystem.rs  lib.rs  network.rs  wasi.rs
crates/kami-sandbox/tests/: capability.rs  error_diagnostic.rs  filesystem.rs  fuzz_filesystem.rs  fuzz_network.rs  network.rs  wasi_security.rs
crates/kami-store-sqlite/: Cargo.toml
crates/kami-store-sqlite/src/: lib.rs  migrations.rs  query_builder.rs  repository.rs  repository_impl.rs  row_mapping.rs
crates/kami-store-sqlite/src/migrations/: 001_init.sql
crates/kami-store-sqlite/tests/: repository_crud.rs  repository_extended.rs  repository_query.rs
crates/kami-transport-http/: Cargo.toml
crates/kami-transport-http/src/: auth.rs  error.rs  lib.rs  router.rs  server.rs
crates/kami-transport-http/tests/: router_integration.rs
crates/kami-transport-stdio/: Cargo.toml
crates/kami-transport-stdio/src/: error.rs  handler.rs  lib.rs  server.rs  transport.rs
crates/kami-transport-stdio/src/dispatch/: initialize.rs  tools_call.rs  tools_list.rs
crates/kami-transport-stdio/tests/: mcp_dispatch.rs  mcp_roundtrip.rs  server_integration.rs  tools_list.rs
crates/kami-types/: Cargo.toml
crates/kami-types/src/: capability.rs  error.rs  event.rs  lib.rs  manifest.rs  tool.rs  version.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER.md  GETTING_STARTED.md  INTEGRATION.md  SECURITY.md  TECHNICAL.md  TOOL_AUTHOR_GUIDE.md
docs/PLUGINS/: CREATE_PLUGIN_PROMPT.md  PLUGIN_SYSTEM_PROMPT.md
examples/echo/: Cargo.toml  README.md  tool.toml
examples/echo/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  tool.toml
examples/hello-world/src/: lib.rs
examples/http-fetch/: Cargo.toml  README.md  tool.toml
examples/http-fetch/src/: lib.rs
examples/json-transform/: Cargo.toml  README.md  tool.toml
examples/json-transform/src/: lib.rs
registry/: README.md  index.json  schema.json
registry/.github/workflows/: validate.yml
site/: index.html
site/css/: style.css
site/js/: main.js
site/plugins/: index.html
tests/fixtures/echo-tool/: Cargo.toml  echo_tool.wasm  tool.toml
tests/fixtures/echo-tool/src/: lib.rs
tests/fixtures/http-fetch-tool/: Cargo.toml  tool.toml
tests/fixtures/http-fetch-tool/src/: lib.rs
tests/fixtures/http-fetch-tool/wit/: world.wit
wit/: host.wit  tool.wit
