[workspace]
resolver = "2"
members = [
    "crates/kami-types",
    "crates/kami-protocol",
    "crates/kami-registry",
    "crates/kami-engine",
    "crates/kami-sandbox",
    "crates/kami-runtime",
    "crates/kami-store-sqlite",
    "crates/kami-mcp",
    "crates/kami-transport-stdio",
    "crates/kami-transport-http",
    "crates/kami-config",
    "crates/kami-cli",
    "crates/kami-guest",
]
exclude = ["tests/fixtures/echo-tool", "tests/fixtures/http-fetch-tool"]

[workspace.dependencies]
# WASM Runtime
wasmtime = "27"
wasmtime-wasi = "27"
wasmtime-wasi-http = "27"
hyper = { version = "1", features = ["client", "http1", "http2"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP transport
axum = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Archive extraction
zip = "2"

# Filesystem watcher
notify = "6.1"

# Property-based testing
proptest = "1"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# SDK
wit-bindgen = "0.51"

# Internal crates
kami-types = { path = "crates/kami-types" }
kami-protocol = { path = "crates/kami-protocol" }
kami-registry = { path = "crates/kami-registry" }
kami-engine = { path = "crates/kami-engine" }
kami-sandbox = { path = "crates/kami-sandbox" }
kami-runtime = { path = "crates/kami-runtime" }
kami-store-sqlite = { path = "crates/kami-store-sqlite" }
kami-transport-stdio = { path = "crates/kami-transport-stdio" }
kami-transport-http = { path = "crates/kami-transport-http" }
kami-config = { path = "crates/kami-config" }
kami-mcp = { path = "crates/kami-mcp" }
kami-guest = { path = "crates/kami-guest" }
