[package]
name = "kami-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for KAMI"

[dependencies]
kami-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
