[package]
name = "kami-engine"
version = "0.1.0"
edition = "2021"
description = "WASM engine powered by Wasmtime"

[dependencies]
kami-types = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
kami-sandbox = { workspace = true }
kami-runtime = { workspace = true }
