[package]
name = "kami-guest"
version = "0.1.0"
edition = "2021"
description = "Guest SDK for building KAMI tools"

[features]
default = []
component-model = ["dep:wit-bindgen"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true, optional = true }
