[package]
name = "kami-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime orchestrator for KAMI"

[dependencies]
kami-types = { workspace = true }
kami-engine = { workspace = true }
kami-sandbox = { workspace = true }
kami-registry = { workspace = true }
wasmtime = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true }
kami-config = { workspace = true }
kami-store-sqlite = { workspace = true }

[[bench]]
name = "cache_bench"
harness = false
