[package]
name = "kami-transport-stdio"
version = "0.1.0"
edition = "2021"
description = "Stdio transport adapter for MCP protocol"

[dependencies]
kami-types = { workspace = true }
kami-protocol = { workspace = true }
kami-mcp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
kami-runtime = { workspace = true }
kami-registry = { workspace = true }
kami-store-sqlite = { path = "../kami-store-sqlite" }
kami-engine = { path = "../kami-engine" }
tokio = { workspace = true }
