[package]
name = "http-fetch"
version = "0.1.0"
edition = "2021"
description = "KAMI tool example — fetches a URL and returns the response"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { path = "../../crates/kami-guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
