[package]
name = "json-transform"
version = "0.1.0"
edition = "2021"
description = "JSON transformation KAMI tool — pick keys, flatten, count"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { path = "../../crates/kami-guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
